--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@headlessui/react": "^2.1.0",
     "@heroicons/react": "^2.1.4",
     "@radix-ui/react-icons": "^1.3.0",
+    "@tailwindcss/forms": "^0.5.7",
     "aws-amplify": "^6.2.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
